app/posts/[id]/PostViewer.module.css
.HeaderRow {
  display: flex;
  justify-content: space-between;
}

.Divider {
  margin: 32px 0 0;
}

.Content {
  background-color: var(--theme-color-5);
  padding: 24px 14px;
}

.Image {
  display: block;
  margin: 0 auto;
}

.Caption {
  display: block;
  font-size: 12px;
  margin: 4px 0;
  text-align: center;
}

